# wireml

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml  deploy-web.yml
apps/runtime/: Dockerfile  README.md  pyproject.toml
apps/runtime/tests/: test_device.py  test_heads.py
apps/runtime/wireml_runtime/: __init__.py  __main__.py  device.py  main.py  schema.py
apps/runtime/wireml_runtime/nodes/: __init__.py  backbones.py  evaluation.py  heads.py
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/canvas/: Canvas.tsx  NodeView.tsx
apps/web/src/lib/: nanoid.ts
apps/web/src/panels/: Inspector.tsx  NodeLibrary.tsx  TemplateGallery.tsx  TopBar.tsx
apps/web/src/runtime/: LocalGraphRunner.ts  WebGraphRunner.ts  scheduler.test.ts  scheduler.ts
apps/web/src/store/: graphStore.ts  runtimeStore.ts
design-system/: README.md  SKILL.md  colors_and_type.css  index.html
design-system/preview/: brand-icons.html  brand-logo.html  color-bases.html  color-brand.html  color-categories.html  color-chapters.html  component-buttons.html  component-inputs.html  component-library-row.html  component-node-cards.html  component-pills.html  spacing-radii.html  spacing-scale.html  spacing-shadows.html  type-body.html  type-display.html  type-mono.html
design-system/ui_kits/marketing/: README.md  index.html
design-system/ui_kits/workbench/: GraphCanvas.jsx  Inspector.jsx  NodeLibrary.jsx  README.md  TemplateGallery.jsx  TopBar.jsx  index.html
docs/audit/: 2026-04-22-audit.md
docs/marketing/: insane-scifi-prompt.md  website-prompt-pack.md
docs/specs/: 2026-04-22-wireml-design.md
scripts/: install.sh
tests/: test_device.py  test_heads.py  test_pipeline.py
wireml/: __init__.py  __main__.py  cli.py  device.py  engine.py  registry.py  schema.py  templates.py
wireml/demos/: __init__.py  webcam.py
wireml/nodes/: __init__.py  backbones.py  data.py  evaluation.py  heads.py
wireml/tui/: __init__.py  app.py  app.tcss
wireml/tui/screens/: custom_classes.py  doctor.py  home.py  pipeline.py  splash.py
wireml/tui/widgets/: __init__.py  banner.py  ticker.py
